<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainMenuActivity" >

 
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnAccessClientList"
        android:layout_alignParentTop="true"
        android:layout_marginTop="54dp"
        android:text="@string/lblChooseAction"
        android:textAppearance="?android:attr/textAppearanceLarge" />

 
    <Button
        android:id="@+id/btnAccessClientList"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/btnAccessClientList"
        android:onClick="btnActionClicked" />
    
    <Button
        android:id="@+id/btnAddNewClient"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnAccessClientList"
        android:layout_below="@+id/btnAccessClientList"
        android:layout_centerVertical="true"
        android:layout_marginTop="19dp"
        android:text="@string/btnAddNewClient"
        android:onClick="btnActionClicked" />

    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnAccessClientList"
        android:layout_below="@+id/btnAddNewClient"
        android:layout_marginTop="19dp"
        android:text="@string/btnChangePassword"
        android:onClick="btnActionClicked" />

    <Button
        android:id="@+id/btnAccessClientList2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnChangePassword"
        android:layout_below="@+id/btnChangePassword"
        android:layout_marginTop="16dp"
        android:onClick="btnActionClicked"
        android:text="@string/btnAccessClientList2" />

</RelativeLayout>
